--- a/index.html
+++ b/index.html
@@ -218,6 +218,19 @@
 
 				</div><!-- .row -->
 
+				<div class="row resume-items">
+
+					<div class="col-md-3 wow bounceInLeft">
+						<h3>Price</h3>
+					</div>
+
+					<div class="col-md-6 col-sm-8 resume-item wow bounceInUp">
+						<h4>$765,000</h4>
+						<hr class="hidden-xs">
+					</div>
+
+				</div><!-- .row -->
+
 			</div><!-- .container -->
 
 		</section>
@@ -555,27 +568,7 @@
 
 					<div class="col-md-6 wow bounceInRight">
 
-						<form id="contact-form" role="form">
-
-							<div class="form-group">
-								<label class="sr-only" for="c_name">Name</label>
-								<input type="text" id="c_name" class="form-control" name="c_name" placeholder="Name">
-							</div>
-
-							<div class="form-group">
-								<label class="sr-only" for="c_email">Email address</label>
-								<input type="email" id="c_email" class="form-control" name="c_email" placeholder="E-mail">
-							</div>
-
-							<div class="form-group">
-								<textarea class="form-control" id="c_message" name="c_message" rows="7" placeholder="Your message"></textarea>
-							</div>
-
-							<button type="submit" class="btn btn-custom-1">
-								<i class="fa fa-bullhorn icon-before"></i> Send it
-							</button>
-
-						</form>
+						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3355.388595096895!2d-97.37515208455368!3d32.75542199239284!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x864e73ecabe53407%3A0x3136880fc975e61b!2s3701+Potomac+Ave%2C+Fort+Worth%2C+TX+76107!5e0!3m2!1sen!2sus!4v1517827359436" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
 
 						<div class="ajax-response"></div>
 
