--- a/index.html
+++ b/index.html
@@ -85,7 +85,12 @@
 					<div class="col-md-12">
 
 						<div class="hello wow bounceInDown">
-							<h1 class="title">3701 Potomac Ave. | Fort Worth</h1>
+							<h1 class="title hidden-xs">
+								3701 Potomac Ave.
+								<br />
+								Fort Worth
+							</h1>
+							<h1 class="title visible-xs">3701 Potomac Ave.</h1>
 							<h3><span class="rotate" style="text-shadow: 1px 2px #999 !important;">3 Bed | 2.5 Bath | Pool | $765,000</span></h3>
 						</div>
 
@@ -123,14 +128,14 @@
 					<div class="col-sm-4 wow bounceInUp">
 						<div class="profile-item">
 							<i class="fa fa-phone"></i>
-							<h5>(817) 980-1105</h5>
+							<h5><a href="tel:+18179801105">(817) 980-1105</a></h5>
 						</div>
 					</div>
 
 					<div class="col-sm-4 wow bounceInRight">
 						<div class="profile-item">
 							<i class="fa fa-map-marker"></i>
-							<h5><a href="https://goo.gl/maps/nJdxiLdGA2m" target="_blank">3701 Potomac Ave, Fort Worth, TX</a></h5>
+							<h5><a href="https://goo.gl/maps/nJdxiLdGA2m" target="_blank">3701 Potomac Ave, Fort Worth</a></h5>
 						</div>
 					</div>
 
@@ -550,25 +555,24 @@
 
 					<div class="col-md-12 headline wow bounceInLeft">
 						<h2>Contact Us</h2>
-						<p>Drop us a line or give us a ring. We love to hear you.</p>
+						<p>Questions and Appointments</p>
 					</div>
 
 					<div class="col-md-6 wow bounceInUp">
 
-						<p>I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine. I am so happy, my dear friend.</p>
+						<p>Call or email to set an appointment to view this wonderful home in an historic neighborhood.</p>
 
 						<ul class="icon-list">
-							<li><i class="fa fa-fw fa-map-marker"></i>001 Some Street, Some City, US</li>
-							<li><i class="fa fa-fw fa-phone"></i>123 4567 8910</li>
-							<li><i class="fa fa-fw fa-envelope-o"></i><a href="mailto:">support@site.com</a></li>
-							<li><i class="fa fa-fw fa-globe"></i><a href="">http://www.site.com</a></li>
+							<li><i class="fa fa-fw fa-map-marker"></i>3701 Potomac Ave, Fort Worth, TX</li>
+							<li><i class="fa fa-fw fa-phone"></i><a href="tel:+18179801105">(817) 980-1105</a></li>
+							<li><i class="fa fa-fw fa-envelope-o"></i><a href="mailto:cox.ken@gmail.com">cox.ken@gmail.com</a></li>
 						</ul>
 
 					</div>
 
 					<div class="col-md-6 wow bounceInRight">
 
-						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3355.388595096895!2d-97.37515208455368!3d32.75542199239284!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x864e73ecabe53407%3A0x3136880fc975e61b!2s3701+Potomac+Ave%2C+Fort+Worth%2C+TX+76107!5e0!3m2!1sen!2sus!4v1517827359436" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3355.388595096895!2d-97.37515208455368!3d32.75542199239284!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x864e73ecabe53407%3A0x3136880fc975e61b!2s3701+Potomac+Ave%2C+Fort+Worth%2C+TX+76107!5e0!3m2!1sen!2sus!4v1517827359436" width="400" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
 
 						<div class="ajax-response"></div>
 
