--- a/index.html
+++ b/index.html
@@ -284,140 +284,130 @@
 					</div>
 
 					<div class="col-md-4 col-sm-6 wow bounceInRight">
-						<a href="assets/images/gallery/large/parlor05.jpg" class="pop-up" title="Caption 3">
+						<a href="assets/images/gallery/large/parlor05.jpg" class="pop-up" title="Entrance">
 							<div class="portfolio-item">
 								<div class="portfolio-item-preview">
 									<img src="assets/images/gallery/small/parlor05.jpg" alt="">
 								</div>
 								<div class="portfolio-item-description">
-									<h3>Some work</h3>
-									<p>Category</p>
+									<h3>Entrance</h3>
 								</div>
 							</div>
 						</a>
 					</div>
 
 					<div class="col-md-4 col-sm-6 wow bounceInUp" data-wow-delay=".2s">
-						<a href="assets/images/gallery/large/parlor07.jpg" class="pop-up" title="Caption 4">
+						<a href="assets/images/gallery/large/parlor07.jpg" class="pop-up" title="Entrance">
 							<div class="portfolio-item">
 								<div class="portfolio-item-preview">
 									<img src="assets/images/gallery/small/parlor07.jpg" alt="">
 								</div>
 								<div class="portfolio-item-description">
-									<h3>Some work</h3>
-									<p>Category</p>
+									<h3>Entrance</h3>
 								</div>
 							</div>
 						</a>
 					</div>
 
 					<div class="col-md-4 col-sm-6 wow bounceInUp" data-wow-delay=".4s">
-						<a href="assets/images/gallery/large/dining07.jpg" class="pop-up" title="Caption 5">
+						<a href="assets/images/gallery/large/dining07.jpg" class="pop-up" title="Dining">
 							<div class="portfolio-item">
 								<div class="portfolio-item-preview">
 									<img src="assets/images/gallery/small/dining07.jpg" alt="">
 								</div>
 								<div class="portfolio-item-description">
-									<h3>Some work</h3>
-									<p>Category</p>
+									<h3>Dining</h3>
 								</div>
 							</div>
 						</a>
 					</div>
 
 					<div class="col-md-4 col-sm-6 wow bounceInUp" data-wow-delay=".6s">
-						<a href="assets/images/gallery/large/dining14.jpg" class="pop-up" title="Caption 6">
+						<a href="assets/images/gallery/large/dining14.jpg" class="pop-up" title="Dining">
 							<div class="portfolio-item">
 								<div class="portfolio-item-preview">
 									<img src="assets/images/gallery/small/dining14.jpg" alt="">
 								</div>
 								<div class="portfolio-item-description">
-									<h3>Some work</h3>
-									<p>Category</p>
+									<h3>Dining</h3>
 								</div>
 							</div>
 						</a>
 					</div>
 
 					<div class="col-md-4 col-sm-6 wow bounceInLeft">
-						<a href="assets/images/gallery/large/kitchen01.jpg" class="pop-up" title="Tudor style">
+						<a href="assets/images/gallery/large/kitchen01.jpg" class="pop-up" title="Kitchen">
 							<div class="portfolio-item">
 								<div class="portfolio-item-preview">
 									<img src="assets/images/gallery/small/kitchen01.jpg" alt="">
 								</div>
 								<div class="portfolio-item-description">
-									<h3>Tudor Style</h3>
-									<p>Built 1929</p>
+									<h3>Kitchen</h3>
 								</div>
 							</div>
 						</a>
 					</div>
 
 					<div class="col-md-4 col-sm-6 wow bounceInUp">
-						<a href="assets/images/gallery/large/kitchen03.jpg" class="pop-up" title="Peninsula Lot">
+						<a href="assets/images/gallery/large/kitchen03.jpg" class="pop-up" title="Kitchen">
 							<div class="portfolio-item">
 								<div class="portfolio-item-preview">
 									<img src="assets/images/gallery/small/kitchen03.jpg" alt="">
 								</div>
 								<div class="portfolio-item-description">
-									<h3>Peninsula Lot</h3>
-									<p>No side neighbors</p>
+									<h3>Kitchen</h3>
 								</div>
 							</div>
 						</a>
 					</div>
 
 					<div class="col-md-4 col-sm-6 wow bounceInRight">
-						<a href="assets/images/gallery/large/kitchen06.jpg" class="pop-up" title="Caption 3">
+						<a href="assets/images/gallery/large/kitchen06.jpg" class="pop-up" title="Kitchen">
 							<div class="portfolio-item">
 								<div class="portfolio-item-preview">
 									<img src="assets/images/gallery/small/kitchen06.jpg" alt="">
 								</div>
 								<div class="portfolio-item-description">
-									<h3>Some work</h3>
-									<p>Category</p>
+									<h3>Kitchen</h3>
 								</div>
 							</div>
 						</a>
 					</div>
 
 					<div class="col-md-4 col-sm-6 wow bounceInUp" data-wow-delay=".2s">
-						<a href="assets/images/gallery/large/living02.jpg" class="pop-up" title="Caption 4">
+						<a href="assets/images/gallery/large/living02.jpg" class="pop-up" title="Living Room">
 							<div class="portfolio-item">
 								<div class="portfolio-item-preview">
 									<img src="assets/images/gallery/small/living02.jpg" alt="">
 								</div>
 								<div class="portfolio-item-description">
-									<h3>Some work</h3>
-									<p>Category</p>
+									<h3>Living Room</h3>
 								</div>
 							</div>
 						</a>
 					</div>
 
 					<div class="col-md-4 col-sm-6 wow bounceInUp" data-wow-delay=".4s">
-						<a href="assets/images/gallery/large/living03.jpg" class="pop-up" title="Caption 5">
+						<a href="assets/images/gallery/large/living03.jpg" class="pop-up" title="Living Room">
 							<div class="portfolio-item">
 								<div class="portfolio-item-preview">
 									<img src="assets/images/gallery/small/living03.jpg" alt="">
 								</div>
 								<div class="portfolio-item-description">
-									<h3>Some work</h3>
-									<p>Category</p>
+									<h3>Living Room</h3>
 								</div>
 							</div>
 						</a>
 					</div>
 
 					<div class="col-md-4 col-sm-6 wow bounceInUp" data-wow-delay=".6s">
-						<a href="assets/images/gallery/large/bath01.jpg" class="pop-up" title="Caption 6">
+						<a href="assets/images/gallery/large/bath01.jpg" class="pop-up" title="Master Bath">
 							<div class="portfolio-item">
 								<div class="portfolio-item-preview">
 									<img src="assets/images/gallery/small/bath01.jpg" alt="">
 								</div>
 								<div class="portfolio-item-description">
-									<h3>Some work</h3>
-									<p>Category</p>
+									<h3>Master Bath</h3>
 								</div>
 							</div>
 						</a>
@@ -426,112 +416,104 @@
 					<!-- copy/paste -->
 
 					<div class="col-md-4 col-sm-6 wow bounceInLeft">
-						<a href="assets/images/gallery/large/bath02.jpg" class="pop-up" title="Tudor style">
+						<a href="assets/images/gallery/large/bath02.jpg" class="pop-up" title="Master Bath">
 							<div class="portfolio-item">
 								<div class="portfolio-item-preview">
 									<img src="assets/images/gallery/small/bath02.jpg" alt="">
 								</div>
 								<div class="portfolio-item-description">
-									<h3>Tudor Style</h3>
-									<p>Built 1929</p>
+									<h3>Master Bath</h3>
 								</div>
 							</div>
 						</a>
 					</div>
 
 					<div class="col-md-4 col-sm-6 wow bounceInUp">
-						<a href="assets/images/gallery/large/master01.jpg" class="pop-up" title="Peninsula Lot">
+						<a href="assets/images/gallery/large/master01.jpg" class="pop-up" title="Master Bed">
 							<div class="portfolio-item">
 								<div class="portfolio-item-preview">
 									<img src="assets/images/gallery/small/master01.jpg" alt="">
 								</div>
 								<div class="portfolio-item-description">
-									<h3>Peninsula Lot</h3>
-									<p>No side neighbors</p>
+									<h3>Master Bed</h3>
 								</div>
 							</div>
 						</a>
 					</div>
 
 					<div class="col-md-4 col-sm-6 wow bounceInRight">
-						<a href="assets/images/gallery/large/master02.jpg" class="pop-up" title="Caption 3">
+						<a href="assets/images/gallery/large/master02.jpg" class="pop-up" title="Master Bed">
 							<div class="portfolio-item">
 								<div class="portfolio-item-preview">
 									<img src="assets/images/gallery/small/master02.jpg" alt="">
 								</div>
 								<div class="portfolio-item-description">
-									<h3>Some work</h3>
-									<p>Category</p>
+									<h3>Master Bed</h3>
 								</div>
 							</div>
 						</a>
 					</div>
 
 					<div class="col-md-4 col-sm-6 wow bounceInUp" data-wow-delay=".2s">
-						<a href="assets/images/gallery/large/bed105.jpg" class="pop-up" title="Caption 4">
+						<a href="assets/images/gallery/large/bed105.jpg" class="pop-up" title="Bedroom">
 							<div class="portfolio-item">
 								<div class="portfolio-item-preview">
 									<img src="assets/images/gallery/small/bed105.jpg" alt="">
 								</div>
 								<div class="portfolio-item-description">
-									<h3>Some work</h3>
-									<p>Category</p>
+									<h3>Bedroom</h3>
 								</div>
 							</div>
 						</a>
 					</div>
 
 					<div class="col-md-4 col-sm-6 wow bounceInUp" data-wow-delay=".4s">
-						<a href="assets/images/gallery/large/bed201.jpg" class="pop-up" title="Caption 5">
+						<a href="assets/images/gallery/large/bed201.jpg" class="pop-up" title="Bedroom">
 							<div class="portfolio-item">
 								<div class="portfolio-item-preview">
 									<img src="assets/images/gallery/small/bed201.jpg" alt="">
 								</div>
 								<div class="portfolio-item-description">
-									<h3>Some work</h3>
-									<p>Category</p>
+									<h3>Bedroom</h3>
 								</div>
 							</div>
 						</a>
 					</div>
 
 					<div class="col-md-4 col-sm-6 wow bounceInUp" data-wow-delay=".6s">
-						<a href="assets/images/gallery/large/back02.jpg" class="pop-up" title="Caption 6">
+						<a href="assets/images/gallery/large/back02.jpg" class="pop-up" title="Fire Pit">
 							<div class="portfolio-item">
 								<div class="portfolio-item-preview">
 									<img src="assets/images/gallery/small/back02.jpg" alt="">
 								</div>
 								<div class="portfolio-item-description">
-									<h3>Some work</h3>
-									<p>Category</p>
+									<h3>Fire Pit</h3>
 								</div>
 							</div>
 						</a>
 					</div>
 
 					<div class="col-md-4 col-sm-6 wow bounceInUp" data-wow-delay=".2s">
-						<a href="assets/images/gallery/large/back04.jpg" class="pop-up" title="Caption 4">
+						<a href="assets/images/gallery/large/back04.jpg" class="pop-up" title="Pool">
 							<div class="portfolio-item">
 								<div class="portfolio-item-preview">
 									<img src="assets/images/gallery/small/back04.jpg" alt="">
 								</div>
 								<div class="portfolio-item-description">
-									<h3>Some work</h3>
-									<p>Category</p>
+									<h3>Pool</h3>
 								</div>
 							</div>
 						</a>
 					</div>
 
 					<div class="col-md-4 col-sm-6 wow bounceInUp" data-wow-delay=".4s">
-						<a href="assets/images/gallery/large/back05.jpg" class="pop-up" title="Caption 5">
+						<a href="assets/images/gallery/large/back05.jpg" class="pop-up" title="Patio">
 							<div class="portfolio-item">
 								<div class="portfolio-item-preview">
 									<img src="assets/images/gallery/small/back05.jpg" alt="">
 								</div>
 								<div class="portfolio-item-description">
-									<h3>Some work</h3>
-									<p>Category</p>
+									<h3>Patio</h3>
 								</div>
 							</div>
 						</a>
