--- a/index.html
+++ b/index.html
@@ -3,8 +3,25 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="">
-	<meta name="author" content="">
+	<meta name="description" content="Tudor-style home for sale in Fort Worth's historic Monticello neighborhood. Built in 1929 and remodeled in 2016, this home features a luxurious master suite, top-notch kitchen with granite counters, hardwood throughout and great outdoor space with swimming pool and fire pit.">
+	<meta name="author" content="3701potomac.com">
+	<meta name="og:type" content="website">
+	<meta name="og:url" content="http://3701potomac.com">
+	<meta name="og:locale" content="en_US">
+	<meta name="og:site_name" content="3701 Potomac Ave.">
+	<meta property="article:publisher" content="3701potomac.com">
+	<meta itemprop="name" content="Home for sale: 3701 Potomac Ave, Fort Worth, TX">
+	<meta itemprop="description" content="Tudor-style home for sale in Fort Worth's historic Monticello neighborhood. Built in 1929 and remodeled in 2016, this home features a luxurious master suite, top-notch kitchen with granite counters, hardwood throughout and great outdoor space with swimming pool and fire pit.">
+	<meta name="twitter:title" content="Home for sale: 3701 Potomac Ave, Fort Worth, TX">
+	<meta name="twitter:description" content="Tudor-style home for sale in Fort Worth's historic Monticello neighborhood. Built in 1929 and remodeled in 2016, this home features a luxurious master suite, top-notch kitchen with granite counters, hardwood throughout and great outdoor space with swimming pool and fire pit.">
+	<meta name="og:title" content="Home for sale: 3701 Potomac Ave, Fort Worth, TX">
+	<meta name="og:description" content="Tudor-style home for sale in Fort Worth's historic Monticello neighborhood. Built in 1929 and remodeled in 2016, this home features a luxurious master suite, top-notch kitchen with granite counters, hardwood throughout and great outdoor space with swimming pool and fire pit.">
+	<meta itemprop="image" content="https://github.com/3701potomac/3701potomac.github.io/raw/master/assets/images/gallery/large/outside04.jpg">
+	<meta property="og:image:secure_url" content="https://github.com/3701potomac/3701potomac.github.io/raw/master/assets/images/gallery/large/outside04.jpg">
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:image" content="https://github.com/3701potomac/3701potomac.github.io/raw/master/assets/images/gallery/large/outside04.jpg">
+	<meta name="twitter:image:src" content="https://github.com/3701potomac/3701potomac.github.io/raw/master/assets/images/gallery/large/outside04.jpg">
+	<meta name="og:image" content="https://github.com/3701potomac/3701potomac.github.io/raw/master/assets/images/gallery/large/outside04.jpg">
 
 	<title>Home for Sale | 3701 Potomac Ave | Fort Worth, Texas</title>
 
